(MAINT) Bump ruby version and add Rubocop
Prior to this commit the minimum Ruby version was set to 2.0.

This commit bumps the minimum requirement to 2.7 and also adds gems
required for rubocop.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,22 @@ env:
   BUNDLE_WITHOUT: release
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    name: Rubocop
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Ruby ${{ matrix.ruby }}
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7
+          bundler-cache: true
+      - name: Rubocop
+        run: |
+          bundle exec rubocop
+
   test:
+    needs: lint
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
